feat(deploy): Deploy on AWS